Fixed vertical alignment of output elements.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,8 @@
-img {
-  width: 2.5rem;
+h2, img {
+  display: inline;
+  vertical-align: middle;
 }
 
-h2, img {
-  display: inline-block;
+img {
+  width: 2.5rem;
 }
